have a nice day!

--- a/indexes/nsc1025/114.md
+++ b/indexes/nsc1025/114.md
@@ -1,5 +1,6 @@
 ### 纪元评论：时政评论
 ---
+#### [梁之：政府不仁，生命如草](../../pages/nsc1025/n13121384.md) 
 #### [颜纯钩：美中走向对抗，香港预后凶险](../../pages/nsc1025/n13121137.md) 
 #### [清竹：灾情中见证古代帝王的真诚与中共的邪恶](../../pages/nsc1025/n13121031.md) 
 #### [李正宽：郑州街头军人与“爱国民众”之谜](../../pages/nsc1025/n13120951.md) 
@@ -29,7 +30,6 @@
 #### [钟原：大陆疫情扩散 南京再背锅](../../pages/nsc1025/n13114813.md) 
 #### [王友群：恶俗维基案 恶搞习近平 栽赃法轮功](../../pages/nsc1025/n13114834.md) 
 #### [【名家专栏】学术研究质疑中共的经济宣传](../../pages/nsc1025/n13113721.md) 
-#### [唐青：中共黑道治国 美欧忍无可忍](../../pages/nsc1025/n13114789.md) 
 
 ---
-#### 第 [ [113](./113.md) / [112](./112.md) / [111](./111.md) / [110](./110.md) / [109](./109.md) / [108](./108.md) / [107](./107.md) / [106](./106.md) ] 页
+#### 第 [ [114](./114.md) / [113](./113.md) / [112](./112.md) / [111](./111.md) / [110](./110.md) / [109](./109.md) / [108](./108.md) / [107](./107.md) ] 页
