--- a/indexes/nsc993/58.md
+++ b/indexes/nsc993/58.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】中共是5000年一遇的灾星](../../pages/nsc993/n13121438.md) 
+#### [千百度：他们挡不住洪水，却挡得住祭奠的鲜花](../../pages/nsc993/n13121088.md) 
+#### [学者：郑州7·20水灾是天灾加系统性人祸](../../pages/nsc993/n13120823.md) 
 #### [【网海拾贝】新闻联播：只见党魁笑，不见百姓哭](../../pages/nsc993/n13118280.md) 
 #### [千百度：郑州淹水事件会怎么落幕？](../../pages/nsc993/n13118169.md) 
 #### [大陆教授：媒体造假报喜是否应追究杀人罪？](../../pages/nsc993/n13118132.md) 
@@ -27,9 +30,6 @@
 #### [浩然：在中共大使馆前的演讲](../../pages/nsc993/n13098467.md) 
 #### [光明：解析中共](../../pages/nsc993/n13099934.md) 
 #### [【网海拾贝】 渐行渐近的文革2.0](../../pages/nsc993/n13099588.md) 
-#### [祝君安：中共邪教的运作模式](../../pages/nsc993/n13099456.md) 
-#### [陆客：别骂祖宗骂自己吧](../../pages/nsc993/n13097813.md) 
-#### [【网海拾贝】中共疫苗这回可把印尼坑惨了](../../pages/nsc993/n13096777.md) 
 
 ---
 #### 第 [ [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) ] 页
