--- a/indexes/nsc1028/54.md
+++ b/indexes/nsc1028/54.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [【名家专栏】《西游记》教我们认清中共欺骗](../../pages/nsc1028/n13129563.md) 
+#### [王友群：林彪之子林立果痛斥毛泽东为暴君](../../pages/nsc1028/n13128622.md) 
 #### [中共罪行录之四十三：名字惹的祸](../../pages/nsc1028/n13115989.md) 
 #### [王友群：被整得最惨的中共元帅彭德怀](../../pages/nsc1028/n13112821.md) 
 #### [中共罪行录之四十二：语录对错招来祸](../../pages/nsc1028/n13113015.md) 
@@ -28,8 +30,6 @@
 #### [被遗忘的百年历史（Ⅸ）1919 至2021](../../pages/nsc1028/n13048246.md) 
 #### [颜智华：国共合作以共产党惨败收场（1）](../../pages/nsc1028/n13078336.md) 
 #### [【中共党史】中共武装割据中的“红色基因”](../../pages/nsc1028/n13074576.md) 
-#### [共产党在中国城市发动“反帝”革命运动（下）](../../pages/nsc1028/n13076119.md) 
-#### [袁斌：中共是全世界最残暴无道的独裁党](../../pages/nsc1028/n13068366.md) 
 
 ---
 #### 第 [ [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) ] 页
