have a nice day!

--- a/indexes/nsc1025/116.md
+++ b/indexes/nsc1025/116.md
@@ -1,5 +1,6 @@
 ### 纪元评论：时政评论
 ---
+#### [【有冇搞错】香港的“世界级笑话”](../../pages/nsc1025/n13133876.md) 
 #### [陈思敏：中国7月票房揭示中共百年党庆的惨淡](../../pages/nsc1025/n13135466.md) 
 #### [王赫：中共强调建军百年目标 释放什么信号？](../../pages/nsc1025/n13135199.md) 
 #### [王友群：中共对美“强硬”的背后在担心什么？](../../pages/nsc1025/n13134328.md) 
@@ -29,7 +30,6 @@
 #### [张菁：从弃婴夺冠说中共对民众的敲骨吸髓](../../pages/nsc1025/n13129934.md) 
 #### [郝平：美全面控场 部署围猎中共五大战略](../../pages/nsc1025/n13129355.md) 
 #### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc1025/n13129025.md) 
-#### [曾慧燕：庇护天堂俱往矣 港人踏上逃亡路](../../pages/nsc1025/n13128667.md) 
 
 ---
-#### 第 [ [115](./115.md) / [114](./114.md) / [113](./113.md) / [112](./112.md) / [111](./111.md) / [110](./110.md) / [109](./109.md) / [108](./108.md) ] 页
+#### 第 [ [116](./116.md) / [115](./115.md) / [114](./114.md) / [113](./113.md) / [112](./112.md) / [111](./111.md) / [110](./110.md) / [109](./109.md) ] 页
