--- a/indexes/nsc1035/52.md
+++ b/indexes/nsc1035/52.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [石山：郑州雨灾激活的感言](../../pages/nsc1035/n13135372.md) 
 #### [邢鉴：我与新西兰国会议员见面](../../pages/nsc1035/n13111626.md) 
 #### [清荷：生活在假话大国里](../../pages/nsc1035/n13103916.md) 
 #### [【名家专栏】反迫害22周年 铭记那些英勇的人](../../pages/nsc1035/n13102771.md) 
@@ -29,7 +30,6 @@
 #### [王友群：台湾是个好地方 谁毁台湾谁有罪](../../pages/nsc1035/n12977761.md) 
 #### [美国精神的推动者 百年音乐家苏萨](../../pages/nsc1035/n12974542.md) 
 #### [千瑞：长望中原](../../pages/nsc1035/n12976554.md) 
-#### [部分海外原清华大学法轮大法弟子诗以咏志谢师恩](../../pages/nsc1035/n12957723.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
