--- a/indexes/nsc993/59.md
+++ b/indexes/nsc993/59.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】中共是僵尸之最，笑话的巅峰](../../pages/nsc993/n13143217.md) 
 #### [【网海拾贝】被饲养肥的，往往是祭祀品！](../../pages/nsc993/n13140755.md) 
 #### [金浴凤：不要问党为什么](../../pages/nsc993/n13141809.md) 
 #### [千百度：批网游是新毒品，中共铁拳要砸向游戏业？](../../pages/nsc993/n13140293.md) 
@@ -29,7 +30,6 @@
 #### [千百度：他们挡不住洪水，却挡得住祭奠的鲜花](../../pages/nsc993/n13121088.md) 
 #### [学者：郑州7·20水灾是天灾加系统性人祸](../../pages/nsc993/n13120823.md) 
 #### [【网海拾贝】新闻联播：只见党魁笑，不见百姓哭](../../pages/nsc993/n13118280.md) 
-#### [千百度：郑州淹水事件会怎么落幕？](../../pages/nsc993/n13118169.md) 
 
 ---
 #### 第 [ [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) ] 页
