have a nice day!

--- a/indexes/nsc1025/117.md
+++ b/indexes/nsc1025/117.md
@@ -1,5 +1,13 @@
 ### 纪元评论：时政评论
 ---
+#### [周晓辉：北京防疫高官有三幅面孔 内藏玄机](../../pages/nsc1025/n13146550.md) 
+#### [颜纯钩：主动脱钩 中国将变成放大的朝鲜](../../pages/nsc1025/n13146504.md) 
+#### [【名家专栏】美国政府为何遣返古巴难民？](../../pages/nsc1025/n13143881.md) 
+#### [王赫：中共三个极危险的核武政策](../../pages/nsc1025/n13144650.md) 
+#### [【名家专栏】加州枪支管控法失败 该结束了](../../pages/nsc1025/n13143175.md) 
+#### [任重：“太不人道”的夫妻分居 现在更不人道](../../pages/nsc1025/n13144680.md) 
+#### [何清涟：美国对COVID的战争对象究竟是谁？](../../pages/nsc1025/n13144447.md) 
+#### [【名家专栏】将言论等同于暴力的危险性](../../pages/nsc1025/n13141122.md) 
 #### [沈舟：中共陆军训练继续露馅（下）](../../pages/nsc1025/n13128371.md) 
 #### [【名家专栏】美科技业保持世界领先地位](../../pages/nsc1025/n13141131.md) 
 #### [小S为选手加油何罪？小粉红党文化作祟](../../pages/nsc1025/n13144232.md) 
@@ -22,14 +30,6 @@
 #### [王赫：中共当局能“绝对领导”军队吗？](../../pages/nsc1025/n13139276.md) 
 #### [沈舟：美军卡尔文森号航母正式部署](../../pages/nsc1025/n13139166.md) 
 #### [【纪元专栏】卑诗改名是罔顾历史](../../pages/nsc1025/n13139279.md) 
-#### [颜丹：河南死伤惨重 中共隐瞒真相自欺欺人](../../pages/nsc1025/n13138981.md) 
-#### [【名家专栏】中共挑战加密电子货币](../../pages/nsc1025/n13138501.md) 
-#### [分析：中共监管给中企投资者带来巨大风险](../../pages/nsc1025/n13138372.md) 
-#### [【名家专栏】是否抵制北京冬奥？让运动员决定](../../pages/nsc1025/n13135905.md) 
-#### [钟原：北戴河会议可能再次不了了之吗？](../../pages/nsc1025/n13137564.md) 
-#### [袁斌：关于河南洪灾的11个疑问 国务院能查清吗？](../../pages/nsc1025/n13137576.md) 
-#### [觅真：为将要灭亡的中共邪党陪葬真是不值得啊！](../../pages/nsc1025/n13137527.md) 
-#### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc1025/n13137438.md) 
 
 ---
 #### 第 [ [117](./117.md) / [116](./116.md) / [115](./115.md) / [114](./114.md) / [113](./113.md) / [112](./112.md) / [111](./111.md) / [110](./110.md) ] 页
