have a nice day!

--- a/indexes/nsc1025/117.md
+++ b/indexes/nsc1025/117.md
@@ -1,5 +1,10 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】扎克伯格、中国和脸书新世界](../../pages/nsc1025/n13147920.md) 
+#### [岳山：七常委北戴河度假 七旬老妇四处扑火](../../pages/nsc1025/n13148179.md) 
+#### [颜丹：暴力“防疫”凸显中共的黑社会本质](../../pages/nsc1025/n13148242.md) 
+#### [唐青：拜登大战略 习近平陷十面埋伏](../../pages/nsc1025/n13147181.md) 
+#### [中俄军力对比 更现实的近邻威胁（三）](../../pages/nsc1025/n13145076.md) 
 #### [周晓辉：北京防疫高官有三幅面孔 内藏玄机](../../pages/nsc1025/n13146550.md) 
 #### [颜纯钩：主动脱钩 中国将变成放大的朝鲜](../../pages/nsc1025/n13146504.md) 
 #### [【名家专栏】美国政府为何遣返古巴难民？](../../pages/nsc1025/n13143881.md) 
@@ -25,11 +30,6 @@
 #### [【名家专栏】共和党人需团结一致与左翼战斗](../../pages/nsc1025/n13141159.md) 
 #### [袁斌：南京疫情不仅是人祸，更是体制之祸](../../pages/nsc1025/n13140220.md) 
 #### [【名家专栏】中共不倒 下次瘟疫只是时间问题](../../pages/nsc1025/n13138500.md) 
-#### [金言：张果老“人将学鬼”的预言正在上演](../../pages/nsc1025/n13139545.md) 
-#### [王友群：中共为什么发动反美宣传战？](../../pages/nsc1025/n13139401.md) 
-#### [王赫：中共当局能“绝对领导”军队吗？](../../pages/nsc1025/n13139276.md) 
-#### [沈舟：美军卡尔文森号航母正式部署](../../pages/nsc1025/n13139166.md) 
-#### [【纪元专栏】卑诗改名是罔顾历史](../../pages/nsc1025/n13139279.md) 
 
 ---
 #### 第 [ [117](./117.md) / [116](./116.md) / [115](./115.md) / [114](./114.md) / [113](./113.md) / [112](./112.md) / [111](./111.md) / [110](./110.md) ] 页
