have a nice day!

--- a/indexes/nsc1025/118.md
+++ b/indexes/nsc1025/118.md
@@ -1,5 +1,10 @@
 ### 纪元评论：时政评论
 ---
+#### [颜纯钩﻿：政局波诘云诡，习近平会不会让权？](../../pages/nsc1025/n13150711.md) 
+#### [魏京生：再谈中国天灾人祸的反思](../../pages/nsc1025/n13150539.md) 
+#### [余英时曾经是小粉红？ 弃党关键时刻揭密](../../pages/nsc1025/n13150142.md) 
+#### [觅真：中共何以如此仇视法轮功？](../../pages/nsc1025/n13149756.md) 
+#### [戈壁东：病毒调查报告出炉 中共反人类罪浮出水面](../../pages/nsc1025/n13149700.md) 
 #### [袁斌：假如全红婵没有压住命运的水花](../../pages/nsc1025/n13149657.md) 
 #### [周晓辉：批疫苗副作用大 药理学博士微博被封](../../pages/nsc1025/n13148266.md) 
 #### [“610办公室”是中共迫害善良民众的魔窟](../../pages/nsc1025/n13148567.md) 
@@ -25,11 +30,6 @@
 #### [沈舟：中共陆军训练继续露馅（下）](../../pages/nsc1025/n13128371.md) 
 #### [【名家专栏】美科技业保持世界领先地位](../../pages/nsc1025/n13141131.md) 
 #### [小S为选手加油何罪？小粉红党文化作祟](../../pages/nsc1025/n13144232.md) 
-#### [沉雁：弱势群体活得有尊严才是精英阶层的体面](../../pages/nsc1025/n13143557.md) 
-#### [王维洛：谈谈河南洪水](../../pages/nsc1025/n13143478.md) 
-#### [颜纯钩：借地方官人头一用 习近平弃车保帅](../../pages/nsc1025/n13143380.md) 
-#### [谢田：中国人口成谜——托生中土的幸运和不幸](../../pages/nsc1025/n13143176.md) 
-#### [袁斌：余英时先生最值得我们纪念的是什么？](../../pages/nsc1025/n13143119.md) 
 
 ---
-#### 第 [ [117](./117.md) / [116](./116.md) / [115](./115.md) / [114](./114.md) / [113](./113.md) / [112](./112.md) / [111](./111.md) / [110](./110.md) ] 页
+#### 第 [ [118](./118.md) / [117](./117.md) / [116](./116.md) / [115](./115.md) / [114](./114.md) / [113](./113.md) / [112](./112.md) / [111](./111.md) ] 页
