--- a/indexes/nsc1028/55.md
+++ b/indexes/nsc1028/55.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [金言：古代童谣何以预示王朝的灭亡？](../../pages/nsc1028/n13148878.md) 
 #### [中共罪行录之四十五：“阴阳头”和“喷气式”](../../pages/nsc1028/n13132408.md) 
 #### [中共罪行录之四十四：“红色恐怖万岁”](../../pages/nsc1028/n13130302.md) 
 #### [【名家专栏】《西游记》教我们认清中共欺骗](../../pages/nsc1028/n13129563.md) 
@@ -29,7 +30,6 @@
 #### [颜智华：国共合作以共产党惨败收场（3）](../../pages/nsc1028/n13081595.md) 
 #### [袁斌：中共是全世界奉送领土最多的卖国党](../../pages/nsc1028/n13080359.md) 
 #### [颜智华：国共合作以共产党惨败收场（2）](../../pages/nsc1028/n13079964.md) 
-#### [被遗忘的百年历史（Ⅸ）1919 至2021](../../pages/nsc1028/n13048246.md) 
 
 ---
 #### 第 [ [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) ] 页
