--- a/indexes/nsc1026/51.md
+++ b/indexes/nsc1026/51.md
@@ -1,5 +1,6 @@
 ### 纪元评论：财经评论
 ---
+#### [何珊如：滴滴危机——一个鲜活的中国故事](../../pages/nsc1026/n13151962.md) 
 #### [【美股瞭望】经济和企业获利增长高峰已过](../../pages/nsc1026/n13134466.md) 
 #### [善如：华尔街的野性与彪悍](../../pages/nsc1026/n13112664.md) 
 #### [【谈股论金】国际油价80美元或成近年天花板](../../pages/nsc1026/n13108524.md) 
@@ -29,7 +30,6 @@
 #### [吴惠林：如何妥善因应后疫情时代？](../../pages/nsc1026/n12553885.md) 
 #### [陈思敏：地方国企债市作乱 习近平防不胜防](../../pages/nsc1026/n12553384.md) 
 #### [【名家专栏】通货膨胀不是一项社会政策](../../pages/nsc1026/n12528711.md) 
-#### [【财经话题】美国大选后股市行情可期](../../pages/nsc1026/n12514949.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
