have a nice day!

--- a/indexes/nsc1025/118.md
+++ b/indexes/nsc1025/118.md
@@ -1,5 +1,15 @@
 ### 纪元评论：时政评论
 ---
+#### [夏林：加拿大大选又要来了？](../../pages/nsc1025/n13155459.md) 
+#### [李正宽：前潍坊政法官员姜国波的跌宕人生](../../pages/nsc1025/n13154804.md) 
+#### [新州：中共的暴政杀器——派出所](../../pages/nsc1025/n13154766.md) 
+#### [石铭：赤峰市恶人遭报的惨烈事实在印证善恶有报的天理](../../pages/nsc1025/n13154681.md) 
+#### [颜纯钩：政府失智 民间失魂 山雨欲来风满楼](../../pages/nsc1025/n13154535.md) 
+#### [林忌：奖牌榜的精神胜利法](../../pages/nsc1025/n13154431.md) 
+#### [王赫：“中医药在两次抗疫中的卓越表现”冲击了谁？](../../pages/nsc1025/n13153817.md) 
+#### [沈舟：美军展示第二场太平洋战争蓝图](../../pages/nsc1025/n13153478.md) 
+#### [【名家专栏】美国西部野火的罪魁祸首](../../pages/nsc1025/n13152588.md) 
+#### [中国团灭校外培训业，华尔街为何蒙查查？](../../pages/nsc1025/n13153334.md) 
 #### [中纪委“炮轰”阿里性侵 用人民战争打击资本](../../pages/nsc1025/n13153045.md) 
 #### [【名家专栏】中共利用亚马逊摧毁民主](../../pages/nsc1025/n13152579.md) 
 #### [【有冇搞错】毁掉中国首面奥运金牌的奇案](../../pages/nsc1025/n13150763.md) 
@@ -20,16 +30,6 @@
 #### [“610办公室”是中共迫害善良民众的魔窟](../../pages/nsc1025/n13148567.md) 
 #### [王友群：“中共病毒”溯源或有重大突破？](../../pages/nsc1025/n13148671.md) 
 #### [杨威：中共奥运金牌战略未实现“东升西降”](../../pages/nsc1025/n13148581.md) 
-#### [【名家专栏】社会达尔文主义和“种族牌”](../../pages/nsc1025/n13147935.md) 
-#### [古啸：疫情“清零”恐致中共崩盘的六大动因](../../pages/nsc1025/n13148079.md) 
-#### [【名家专栏】共产主义荼毒美国数十年](../../pages/nsc1025/n13147959.md) 
-#### [郝平：安徽执法人员的临门“国脚”火了！](../../pages/nsc1025/n13147738.md) 
-#### [【名家专栏】扎克伯格、中国和脸书新世界](../../pages/nsc1025/n13147920.md) 
-#### [岳山：七常委北戴河度假 七旬老妇四处扑火](../../pages/nsc1025/n13148179.md) 
-#### [颜丹：暴力“防疫”凸显中共的黑社会本质](../../pages/nsc1025/n13148242.md) 
-#### [唐青：拜登大战略 习近平陷十面埋伏](../../pages/nsc1025/n13147181.md) 
-#### [中俄军力对比 更现实的近邻威胁（三）](../../pages/nsc1025/n13145076.md) 
-#### [周晓辉：北京防疫高官有三幅面孔 内藏玄机](../../pages/nsc1025/n13146550.md) 
 
 ---
 #### 第 [ [118](./118.md) / [117](./117.md) / [116](./116.md) / [115](./115.md) / [114](./114.md) / [113](./113.md) / [112](./112.md) / [111](./111.md) ] 页
