--- a/indexes/nsc993/59.md
+++ b/indexes/nsc993/59.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】全红婵摘金救母是中国的耻辱](../../pages/nsc993/n13154466.md) 
 #### [【网海拾贝】不需知道病毒准确源头就可以追责](../../pages/nsc993/n13151895.md) 
 #### [理悟：党妈送儿入鬼乡](../../pages/nsc993/n13150749.md) 
 #### [【网海拾贝】郑州4000辆泡水车的主人去哪了？](../../pages/nsc993/n13149792.md) 
@@ -29,7 +30,6 @@
 #### [千百度：河南水灾到底死了多少人？](../../pages/nsc993/n13130317.md) 
 #### [岳山：秦刚赴美 外交系猪队友集体看他笑话？](../../pages/nsc993/n13129795.md) 
 #### [【网海拾贝】美国会两党领袖要求彻查中共病毒](../../pages/nsc993/n13129142.md) 
-#### [祝君安：捣练子·妖共人祸三步曲（外一篇）](../../pages/nsc993/n13129125.md) 
 
 ---
 #### 第 [ [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) ] 页
