--- a/indexes/nsc1028/55.md
+++ b/indexes/nsc1028/55.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [袁斌：罗素对“俄国革命”的洞见](../../pages/nsc1028/n13159737.md) 
 #### [王友群：北京大学一级教授向达文革被迫害致死](../../pages/nsc1028/n13150966.md) 
 #### [观雨堂主：中共对美国的仇恨永远不会放弃](../../pages/nsc1028/n13149032.md) 
 #### [金言：古代童谣何以预示王朝的灭亡？](../../pages/nsc1028/n13148878.md) 
@@ -29,7 +30,6 @@
 #### [中共罪行录之三十四：大饥荒时代的悲惨故事](../../pages/nsc1028/n13087993.md) 
 #### [王友群：北京大学教授王重民文革中悬梁自尽](../../pages/nsc1028/n13084645.md) 
 #### [颜智华：国共合作以共产党惨败收场（4）](../../pages/nsc1028/n13082967.md) 
-#### [颜智华：国共合作以共产党惨败收场（3）](../../pages/nsc1028/n13081595.md) 
 
 ---
 #### 第 [ [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) ] 页
