--- a/indexes/nsc993/59.md
+++ b/indexes/nsc993/59.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】世卫喊话北京：交出所有新冠病例数据](../../pages/nsc993/n13161920.md) 
+#### [林泉：不要与CCP扯闲上当](../../pages/nsc993/n13161954.md) 
 #### [【网海拾贝】敲锣女还会有，但方方不一定会出现了](../../pages/nsc993/n13159819.md) 
 #### [袁斌：对于月仙离世的反思](../../pages/nsc993/n13157072.md) 
 #### [【网海拾贝】中共国恐成为与世隔绝的“孤岛”](../../pages/nsc993/n13157270.md) 
@@ -28,8 +30,6 @@
 #### [千百度：活着的不给讲真话，死去的不允许祭奠](../../pages/nsc993/n13132436.md) 
 #### [【网海拾贝】无处不在郑州神秘黑衣人是谁？](../../pages/nsc993/n13132657.md) 
 #### [李春草：蝶恋花](../../pages/nsc993/n13132164.md) 
-#### [陈达：“民企”民空“企” 共产不止灭私产](../../pages/nsc993/n13132139.md) 
-#### [金浴凤：中共是灾难之源](../../pages/nsc993/n13132116.md) 
 
 ---
 #### 第 [ [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) ] 页
