have a nice day!

--- a/indexes/nsc1025/120.md
+++ b/indexes/nsc1025/120.md
@@ -1,5 +1,11 @@
 ### 纪元评论：时政评论
 ---
+#### [周晓辉：党媒军报齐批张文宏 混战背后不简单](../../pages/nsc1025/n13164060.md) 
+#### [韦拓：中南海为何高调炒作“浙江模式”？](../../pages/nsc1025/n13161859.md) 
+#### [颜丹：“七夕”被要求“颂党恩”很荒谬](../../pages/nsc1025/n13164032.md) 
+#### [田云：疫情严重？解读中共卫健委最新发布会](../../pages/nsc1025/n13163312.md) 
+#### [王友群：25个国家力挺加拿大的四大看点](../../pages/nsc1025/n13163081.md) 
+#### [中印军力对比 矛盾难解 胜负难分](../../pages/nsc1025/n13161475.md) 
 #### [郝平：北戴河会后 党媒为何高喊习核心？](../../pages/nsc1025/n13162607.md) 
 #### [任重：更换新疫苗 国药科兴灭活疫苗无效？](../../pages/nsc1025/n13162571.md) 
 #### [【名家专栏】台湾在中日关系中举足轻重](../../pages/nsc1025/n13160478.md) 
@@ -24,12 +30,6 @@
 #### [美国前官员：中共迫害法轮功是群体灭绝](../../pages/nsc1025/n13157750.md) 
 #### [周晓辉：青少年打疫苗出了问题谁负责？](../../pages/nsc1025/n13158230.md) 
 #### [何清涟：中国行业整顿的即期目标：脱虚向实](../../pages/nsc1025/n13158048.md) 
-#### [【有冇搞错】降雨带北移 对中国有大利](../../pages/nsc1025/n13155864.md) 
-#### [颜丹：中共国为何会出现奥运“罪人榜”](../../pages/nsc1025/n13156939.md) 
-#### [东方觉：中共的“举国体制”与“金牌战略”](../../pages/nsc1025/n13157031.md) 
-#### [谢田：中南海纲纪废弛 战狼传檄文武倒置](../../pages/nsc1025/n13156981.md) 
-#### [陈思敏：上海电气丑闻背后多少党政军老虎？](../../pages/nsc1025/n13155917.md) 
-#### [王赫：“娱乐至死”反噬中共？](../../pages/nsc1025/n13156328.md) 
 
 ---
 #### 第 [ [120](./120.md) / [119](./119.md) / [118](./118.md) / [117](./117.md) / [116](./116.md) / [115](./115.md) / [114](./114.md) / [113](./113.md) ] 页
