--- a/indexes/nsc993/60.md
+++ b/indexes/nsc993/60.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [袁斌：《人民日报》说病毒来自意大利，你信吗？](../../pages/nsc993/n13163255.md) 
 #### [吐为快：狼羊联颁《吃肉法》](../../pages/nsc993/n13163403.md) 
 #### [金浴凤：渔歌子·党政联合收割机](../../pages/nsc993/n13163400.md) 
 #### [【网海拾贝】“1460天，我的眼泪早已流尽”](../../pages/nsc993/n13162635.md) 
@@ -29,7 +30,6 @@
 #### [金浴凤：不要问党为什么](../../pages/nsc993/n13141809.md) 
 #### [千百度：批网游是新毒品，中共铁拳要砸向游戏业？](../../pages/nsc993/n13140293.md) 
 #### [【网海拾贝】河南官员们会有什么下场？](../../pages/nsc993/n13137666.md) 
-#### [千百度：南京禄口机场官僚主义防疫亲历记](../../pages/nsc993/n13134903.md) 
 
 ---
-#### 第 [ [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) ] 页
+#### 第 [ [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) ] 页
