--- a/indexes/nsc1035/52.md
+++ b/indexes/nsc1035/52.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [乐评：抹不去的纪念——倾听大雄《无名之辈无所适从》](../../pages/nsc1035/n13163359.md) 
 #### [黄翔：宇宙时空岩文（之二）](../../pages/nsc1035/n13141116.md) 
 #### [黄翔：宇宙时空岩文（之一）](../../pages/nsc1035/n13140355.md) 
 #### [石山：郑州雨灾激活的感言](../../pages/nsc1035/n13135372.md) 
@@ -29,7 +30,6 @@
 #### [今年的阵亡将士纪念日：自由的新生](../../pages/nsc1035/n12989540.md) 
 #### [阵亡将士纪念日：铭记那些献出生命的人](../../pages/nsc1035/n12985418.md) 
 #### [影评《抉择》 经历了这一切，当中国人还值得吗？](../../pages/nsc1035/n12983029.md) 
-#### [王友群：台湾是个好地方 谁毁台湾谁有罪](../../pages/nsc1035/n12977761.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
